--- a/imdex.html
+++ b/imdex.html
@@ -1,4 +1,5 @@
 <html>
+  <head>
   <title></title>
   <style>
     body {
@@ -106,7 +107,8 @@
           box-shadow: 7px 0 5px 0 rgba(0, 0, 0, 0.3), inset 2px 0px 15px 0px rgba(0, 0, 0, 0.1);
 }
   </style>
-  <head>
+  </head>
+  <body>
 <div class="birthday-card">
     <!-- Inner -->
     <div class="cover-inner">
@@ -132,5 +134,5 @@
     </div>
 </div>
     
-  </head>
+  </body>
 </html>
