--- a/imdex.html
+++ b/imdex.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
   <title></title>
@@ -123,7 +124,7 @@
     <!-- Text -->
     <div class="text">
         <p class="title">
-            Happy Birthday! <br> TianDev
+            Happy Birthday! <br> Basim
         </p>
         <p>
             I hope your special day will bring you lots of happiness,
